--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Snap - Free Bootstrap 4 Multipurpose Landing Page Template</title>
-        <meta name="description" content="Snap is a beautiful Bootstrap 4 template for multipurpose landing pages." /> 
+        <title>Snap</title>
+        <meta name="description" content="Snap is a beautiful Bootstrap 4 template for multipurpose landing pages." />
 
         <!--Inter UI font-->
         <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
@@ -310,7 +310,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 my-auto text-center text-md-left">
-                        &copy;2019 Snap.
+                        &copy;2021 Snap.
                     </div>
                     <div class="col-md-4 text-center">
                         <ul class="list-inline social social-white-alt social-rounded social-sm mb-0">
@@ -338,7 +338,7 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-12 text-muted text-center small">
-                        &copy; 2019 Snap - All Rights Reserved
+                        &copy; 2021 Snap - Dvorchuk Ilya
                     </div>
                 </div>
             </div>
@@ -353,8 +353,8 @@
                 <div class="row">
                     <div class="col-md-8 mx-auto my-auto">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item allowfullscreen" 
-                                    src="https://www.youtube.com/embed/MGsalg2f9js?rel=0&amp;controls=0&amp;showinfo=0" 
+                            <iframe class="embed-responsive-item allowfullscreen"
+                                    src="https://www.youtube.com/embed/MGsalg2f9js?rel=0&amp;controls=0&amp;showinfo=0"
                                     allowfullscreen="" frameborder="0" height="415" width="100%">
                             </iframe>
                         </div>
